change "Google SketchUp" to "SketchUp" in README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Ruby scripts which read detector geometries in Detector Description Language
-(DDL) and build 3D models in Google SketchUp.
+(DDL) and build 3D models in SketchUp.
 
 https://twiki.cern.ch/twiki/bin/view/CMSPublic/SketchUpCMS
